Revision history for Sys-Syslog

0.25 -- 2008.xx.xx -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#34691: Fixed an incorrect call to sysopen() which
        prevented Sys::Syslog from working on some Solaris systems. 
        Thanks to Paul Townsend. 
        [DIST] Add AUTHOR to WriteMakefile() in order to fix the META.yml
        generated by ExtUtils::MakeMaker.

0.24 -- 2007.12.31 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPANT-RT#32001: Skip the setlogsock('stream') tests when 
        /dev/log is unavailable (Brendan O'Dea).

0.23 -- 2007.11.12 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Fixed a too liberal test in the "pipe" mechanism, thanks
        to Jan Dubois.
        [DIST] fallback/syslog.h was missing from MANIFEST (thanks to CPAN 
        Tester Matthew Musgrove).
        [TESTS] Better handling of Perl 5.005, thanks to CPAN Tester Slaven Rezic.

0.22 -- 2007.11.08 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#29875: Added workaround SpamAssassin overzealous
        logging features.
        [FEATURE] Added support for PERROR option.
        [FEATURE] Support for SYSLOG on z/OS, thanks to Chun Bing Ge.
        [CODE] Prevent $@ from being visible outside the module, in trying 
        to address the problem reported in CPAN-RT#29875.
        [DOC] CPAN-RT#29451: Add Copyright notice. Thanks to Allison Randal
        for her advice.
        [DOC] New speaking about Win32 API instead of Win32 operating system.

0.21 -- 2007.09.14 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] setlogsock(eventlog) returned true even when it shouldn't have.
        [BUGFIX] CPAN-RT#24431: Added workaround for Mac OS X syslogd.
        [FEATURE] Added "pipe" mechanism in order to support HP-UX named pipe.
        Thanks to H.Merijn Brand and PROCURA.
        [CODE] Sys::Syslog works again on Perl 5.005, thanks to Nicholas Clark.

0.20 -- 2007.09.05 -- Sebastien Aperghis-Tramoni (SAPER)