@@ -4,6 +4,8 @@ Revision history for Sys-Syslog
         [BUGFIX] CPAN-RT#34691: Fixed an incorrect call to sysopen() which
         prevented Sys::Syslog from working on some Solaris systems. 
         Thanks to Paul Townsend. 
+        [BUGFIX] CPAN-RT#34753: Fixed a slowness introduced in v0.19 (which 
+        was to work around OSX syslog own slowness). Thanks to Alex Efros.
         [DIST] Add AUTHOR to WriteMakefile() in order to fix the META.yml
         generated by ExtUtils::MakeMaker.
 
